# calculator_project

./: CMakeLists.txt  plan.txt
doc/hdd/: calc_architecture.puml  calc_dynamic.puml
lexer/src/: Lexer.cpp
src/ast/: CMakeLists.txt
src/ast/doc/cdd/: ast_dynamic.puml  ast_static.puml
src/ast/include/ast/: INode.hpp  TNode.hpp
src/ast/test/: ASTUnitTest.cpp  CMakeLists.txt
src/calc/: CMakeLists.txt
src/calc/src/: main.cpp
src/lexer/: CMakeLists.txt
src/lexer/doc/cdd/: lexer_dynamic.puml  lexer_static.puml
src/lexer/include/lexer/: ILexer.hpp  Lexer.hpp
src/lexer/test/: CMakeLists.txt  LexerUnitTest.cpp
src/parser/: CMakeLists.txt
src/parser/doc/cdd/: parser_dynamic.puml  parser_static.puml
src/parser/include/parser/: Parser.hpp
src/parser/src/: Parser.cpp
src/parser/test/: CMakeLists.txt  ParserUnitTest.cpp
